@@ -23,6 +23,7 @@ Verilator 5.033 devel
 * Fix pattern assignment to real inside struct (#5713).
 * Fix %p format output for real inside struct (#5713).
 * Fix segfault when only enum value referenced in package (#5714). [Dan Katz]
+* Fix misoptimizing away `$urandom` (#5703). [Parker Schless]
 * Fix matching language extension options including dots.
 
 
